# python_workflow_example

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  noxfile.py  pyproject.toml  readme.md  requirements-dev.txt  requirements-tidy.txt  requirements.txt
src/python_module/: __init__.py  main.py
